fix: adjust gap card project

--- a/src/components/Card/CardProject/style.module.scss
+++ b/src/components/Card/CardProject/style.module.scss
@@ -4,7 +4,7 @@
   background: #1d1d1d;
   padding: 1.25rem;
   margin: 0 10px;
-
+  gap: 0.875rem;
   display: flex;
   justify-content: space-between;
 }
